add cors, inicio dev css e front

--- a/sovisfront/src/app/app.component.html
+++ b/sovisfront/src/app/app.component.html
@@ -1,4 +1,17 @@
-<a routerLink="home">Home</a>
-<a routerLink="categoria">Categoria</a>
-<a routerLink="produtos">Produto</a>
-<router-outlet></router-outlet>
+<header>
+    <h3>
+        <a routerLink="home" class="logo">SOVIS</a>
+    </h3>
+
+    <nav>
+        <a routerLink="home">Home</a>
+        <a routerLink="categoria">Categoria</a>
+        <a routerLink="produtos">Produto</a>
+    </nav>
+
+    <p>E-commerce Teste</p>
+
+</header>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
