--- a/sovisfront/src/styles.css
+++ b/sovisfront/src/styles.css
@@ -1,1 +1,50 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web');
+body{
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 18px;
+
+}
+header {
+    width: 100%;
+    height: 80px;
+    background: rgb(31, 158, 52);
+}
+header .logo{
+    float: left;
+    font-size: 25px;
+    padding: 20px;
+}
+header h3, header a, header p {
+    color: rgba(255, 254, 254, 0.89);
+}
+header nav {
+    float: left;
+    margin-top: 25px;
+    border-left: 1px solid rgba(255, 254, 254, 0.89);
+}
+header nav a {
+    font-size: 18px;
+    padding: 10px;
+    border-bottom: 1px solid rgb(31, 158, 52);
+}
+header nav a:hover{
+    color: rgb(226, 218, 218);
+    border-bottom: 1px solid rgb(226, 218, 218);
+    transition: border-bottom 1s, color 1s;
+}
+a{
+    text-decoration: none;
+}
+header p{
+    float: right;
+    padding: 5px 10px;
+}
+.container {
+    width: 1000px;
+    margin: 0 auto;
+}
+
+table{
+    width: 100%;
+    text-align: left;
+}
