inicio dev carrinho

--- a/sovisfront/src/app/categoria/categoria.component.html
+++ b/sovisfront/src/app/categoria/categoria.component.html
@@ -8,7 +8,7 @@
   <tbody>
     <tr *ngFor="let categoria of categorias">
       <td>{{categoria.ctgDescricao}}</td>
-      <td><a routerLink="produtos">Ver produtos</a></td>
+      <td><a routerLink="/produtoscat/{{categoria.ctgCodigo}}">Ver produtos</a></td>
     </tr>
   </tbody>
 </table>
