--- a/sovisfront/src/styles.css
+++ b/sovisfront/src/styles.css
@@ -1,30 +1,94 @@
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web');
+/*reset*/
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+h1,h2,h3,h4,h5,h6{
+    padding: 5px 0;
+}
+/*Inicio Css E-commerce*/
+h1{font-size: 40px;}
+h2{font-size: 35px;}
+h3{font-size: 30px;}
+h4{font-size: 27px;}
+h5{font-size: 24px;}
+h6{font-size: 20px;}
+
 body{
     font-family: 'Titillium Web', sans-serif;
     font-size: 18px;
-
 }
 header {
     width: 100%;
     height: 80px;
     background: rgb(31, 158, 52);
+    line-height: 80px;
 }
 header .logo{
     float: left;
-    font-size: 25px;
-    padding: 20px;
+    font-size: 25px;    
 }
-header h3, header a, header p {
+header span, header a, header p {
     color: rgba(255, 254, 254, 0.89);
+    vertical-align: middle;
+}
+header span{
+    padding: 0 10px;
 }
 header nav {
     float: left;
-    margin-top: 25px;
+    margin-left: 20px;    
     border-left: 1px solid rgba(255, 254, 254, 0.89);
 }
 header nav a {
     font-size: 18px;
-    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px; 
     border-bottom: 1px solid rgb(31, 158, 52);
 }
 header nav a:hover{
@@ -36,15 +100,135 @@ a{
     text-decoration: none;
 }
 header p{
+    text-align: right;
+    padding-right: 10px;
     float: right;
-    padding: 5px 10px;
 }
 .container {
     width: 1000px;
-    margin: 0 auto;
+    margin: 0 auto;       
 }
 
 table{
     width: 100%;
     text-align: left;
 }
+
+/*.grid{    
+    float: left;    
+    border: 1px solid black;
+    margin: 5px;  
+    padding: 5px 0;  
+}*/
+[class*="grid-"] {
+    float: left;
+    padding: 15px;    
+}
+.grid-1{
+    width: 8.32%;
+}
+.grid-2{
+    width: 16.666%
+}
+.grid-3{
+    width: 25%;        
+}
+.grid-4{
+    width: 32%;    
+}
+.grid-5{
+    width: 41%;
+}
+.grid-6{
+    width: 50%
+}
+.grid-7{
+    width: 58.33%;        
+}
+.grid-8{
+    width: 66.66%;    
+}
+.grid-9{
+    width: 75%;
+}
+.grid-10{
+    width: 83.33%;        
+}
+.grid-11{
+    width: 91.66%;    
+}
+.grid-12{
+    width: 100%;
+}
+.grid img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    margin-top: 5px;
+}
+.grid p{
+    text-align: center;
+    margin: 0 auto;
+    padding: 5px;
+    float: left;
+}
+.grid a{
+    float: left;
+}
+.btn{    
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    cursor: pointer;
+}
+.btn-primary{
+    color: #fff;
+    background: rgb(31, 158, 52);
+    margin: 0 5px;
+}
+.center {
+    margin: auto;
+}
+
+.shopping-cart{
+    float: right;
+    width: 110px;
+    height: 50px;    
+    margin-right: 10px;
+    margin-top: 10px;    
+}
+.shopping-cart img{    
+    float: left;
+}
+.shopping-cart span{
+    padding: 5px;    
+    font-size: 14px;
+    color: rgb(255, 255, 255);
+}
+
+.circle {
+    font-size: 13px;
+    height: 25px;
+    width: 25px;
+    background: rgb(21, 104, 35);;    
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    top: -35px;
+    right: 10px;
+    line-height: 25px !important;
+    text-align: center;
+  }
