--- a/sovisfront/src/app/app.component.html
+++ b/sovisfront/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
-    <h3>
+    <span>
         <a routerLink="home" class="logo">SOVIS</a>
-    </h3>
+    </span>
 
     <nav>
         <a routerLink="home">Home</a>
@@ -9,7 +9,16 @@
         <a routerLink="produtos">Produto</a>
     </nav>
 
-    <p>E-commerce Teste</p>
+    <div class="shopping-cart">
+      <a routerLink="/carrinho">
+        <img src="../assets/shopping-cart.png" alt="">
+        <div class="circle">
+        {{quantidade}}
+        </div>
+      </a>
+    </div>
+
+
 
 </header>
 <div class="container">
