att textos iniciais

--- a/sovisfront/src/app/categoria/categoria.component.html
+++ b/sovisfront/src/app/categoria/categoria.component.html
@@ -1,7 +1,12 @@
+<h5>Lista de Categorias de nossa loja</h5>
+<p>Para visualizar os produtos de uma categoria clique em <u>Ver Produtos</u></p>
+
+<br>
+<br>
 <table class="table">
   <thead>
     <tr>
-      <th>Categoria</th>
+      <th>Categorias</th>
       <th></th>
     </tr>
   </thead>
