add projeto angular compilado no projeto java, metodo index controller redirecionando corretamente

--- a/sovisfront/src/app/app.component.html
+++ b/sovisfront/src/app/app.component.html
@@ -11,7 +11,7 @@
 
     <div class="shopping-cart">
       <a routerLink="/carrinho">
-        <img src="../assets/shopping-cart.png" alt="">
+        <img src="{{img}}" alt="">
         <div class="circle">
          {{quantidade}}
         </div>
